Closed Bug 598955 Opened 14 years ago Closed 14 years ago

setViewportScale throws NS_ERROR_NOT_AVAILABLE a lot during browser-chrome tests

Categories

(Core :: Layout, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mfinkle, Assigned: cjones)

Details

Attachments

(2 files)

When running browser-chrome tests for Fennec, we see this error a lot:

[JavaScript Error: "uncaught exception: [Exception... "Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIFrameLoader.setViewportScale]"  nsresult: "0x80040111 (NS_ERROR_NOT_AVAILABLE)"  location: "JS frame :: chrome://browser/content/bindings/browser.xml :: _setScale :: line 816"  data: no]"]

Which is due to:

http://mxr.mozilla.org/mozilla-central/source/content/base/src/nsFrameLoader.cpp#1547

Chris Jones said this shouldn't be a fatal problem, and the scale will applied when the primary frame becomes available. The "XXX" comment even suggests the condition should be silent.

I am mainly looking to reduce debug output noise during tests. Thoughts?
Attachment #478016 - Flags: review?(tnikkel) → review+
Comment on attachment 478016 [details] [diff] [review]
It's OK to change the viewport config of a <browser> without a frame

This aids Fennec testing
Attachment #478016 - Flags: approval2.0? → approval2.0+
http://hg.mozilla.org/mozilla-central/rev/2e5c5d72f4fc
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: