Bug 598955: It's OK to change the viewport config of a <browser> without a frame. r=tn a=mfinkle